text aligned correctly on each li

--- a/app/resources/css/style.css
+++ b/app/resources/css/style.css
@@ -108,12 +108,13 @@ ul.todo li
   font-size: 14px;
   font-weight: 500;
   color: #444;
-  line-height: 22px; 
+  line-height: 22px;
   background: #fff;
   border-radius: 5px;
   box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
   margin: 0 0 10px 0;
-  padding: 14 100px 14 14;
+  padding: 14px 100px 14px 14px;
+  word-break: break-word;
 }
 
 ul.todo li:last-of-type
